Feature: DEG integration (#274)