@@ -4,11 +4,13 @@ import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.collections4.MapUtils;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntity;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityDetails;
+import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityGroupLineageList;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityLineage;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityLineageEdge;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityLineageNode;
@@ -25,6 +27,7 @@ import org.opendatadiscovery.oddplatform.dto.DataEntityDetailsDto;
 import org.opendatadiscovery.oddplatform.dto.DataEntityDetailsDto.DataQualityTestDetailsDto;
 import org.opendatadiscovery.oddplatform.dto.DataEntityDimensionsDto;
 import org.opendatadiscovery.oddplatform.dto.DataEntityDto;
+import org.opendatadiscovery.oddplatform.dto.DataEntityGroupLineageDto;
 import org.opendatadiscovery.oddplatform.dto.DataEntityLineageDto;
 import org.opendatadiscovery.oddplatform.dto.DataEntityLineageStreamDto;
 import org.opendatadiscovery.oddplatform.dto.DataSourceDto;
@@ -49,16 +52,32 @@ public class DataEntityMapperImpl implements DataEntityMapper {
 
     @Override
     public DataEntity mapPojo(final DataEntityDimensionsDto dataEntityDto) {
-        return mapPojo(dataEntityDto.getDataEntity())
-            .types(dataEntityDto.getTypes().stream().map(this::mapType).collect(Collectors.toList()))
+        final List<DataEntityType> types = dataEntityDto.getTypes()
+            .stream()
+            .map(this::mapType)
+            .toList();
+
+        final List<DataEntityType.NameEnum> typeNames = types.stream()
+            .map(DataEntityType::getName)
+            .toList();
+
+        final DataEntity entity = mapPojo(dataEntityDto.getDataEntity())
+            .types(types)
             .subType(mapSubType(dataEntityDto.getSubtype()))
             .ownership(ownershipMapper.mapDtos(dataEntityDto.getOwnership()))
             .dataSource(dataSourceMapper.mapPojo(new DataSourceDto(dataEntityDto.getDataSource(),
                 dataEntityDto.getNamespace())))
             .tags(dataEntityDto.getTags() != null
                 ? dataEntityDto.getTags().stream().map(tagMapper::mapPojo).collect(Collectors.toList())
-                : null
-            );
+                : null);
+        if (typeNames.contains(DataEntityType.NameEnum.ENTITY_GROUP)) {
+            final List<DataEntityRef> dataEntityRefs = dataEntityDto.getGroupsDto().entities().stream()
+                .map(this::mapReference)
+                .toList();
+            entity.setEntities(dataEntityRefs);
+            entity.setItemsCount(dataEntityDto.getGroupsDto().itemsCount());
+        }
+        return entity;
     }
 
     private DataEntity mapPojo(final DataEntityPojo pojo) {
@@ -95,6 +114,11 @@ public class DataEntityMapperImpl implements DataEntityMapper {
             .map(this::mapType)
             .collect(Collectors.toList());
 
+        final List<DataEntityRef> groups = Optional.ofNullable(dto.getDataEntityGroups()).stream()
+            .flatMap(Collection::stream)
+            .map(this::mapReference)
+            .toList();
+
         final DataEntityDetails details = new DataEntityDetails()
             .id(pojo.getId())
             .externalName(pojo.getExternalName())
@@ -104,6 +128,7 @@ public class DataEntityMapperImpl implements DataEntityMapper {
             .externalDescription(pojo.getExternalDescription())
             .createdAt(addUTC(pojo.getCreatedAt()))
             .updatedAt(addUTC(pojo.getUpdatedAt()))
+            .dataEntityGroups(groups)
             .types(types)
             .subType(mapSubType(dto.getSubtype()))
             .ownership(ownershipMapper.mapDtos(dto.getOwnership()))
@@ -118,19 +143,19 @@ public class DataEntityMapperImpl implements DataEntityMapper {
             .collect(Collectors.toList());
 
         if (typeNames.contains(DataEntityType.NameEnum.SET)) {
-            details.setVersionList(datasetVersionMapper.mapPojo(dto.getDataSetDetailsDto().getDatasetVersions()));
+            details.setVersionList(datasetVersionMapper.mapPojo(dto.getDataSetDetailsDto().datasetVersions()));
             details.setStats(mapStats(dto.getDataSetDetailsDto()));
         }
 
         if (typeNames.contains(DataEntityType.NameEnum.TRANSFORMER)) {
-            details.setSourceList(dto.getDataTransformerDetailsDto().getSourceList()
+            details.setSourceList(dto.getDataTransformerDetailsDto().sourceList()
                 .stream()
                 .distinct()
                 .map(this::mapReference)
                 .collect(Collectors.toList()));
 
             details.setTargetList(dto.getDataTransformerDetailsDto()
-                .getTargetList()
+                .targetList()
                 .stream()
                 .distinct()
                 .map(this::mapReference)
@@ -139,32 +164,40 @@ public class DataEntityMapperImpl implements DataEntityMapper {
 
         if (typeNames.contains(DataEntityType.NameEnum.QUALITY_TEST)) {
             final DataQualityTestExpectation expectation = new DataQualityTestExpectation()
-                .type(dto.getDataQualityTestDetailsDto().getExpectationType());
+                .type(dto.getDataQualityTestDetailsDto().expectationType());
 
-            expectation.putAll(MapUtils.emptyIfNull(dto.getDataQualityTestDetailsDto().getExpectationParameters()));
+            expectation.putAll(MapUtils.emptyIfNull(dto.getDataQualityTestDetailsDto().expectationParameters()));
 
             details.expectation(expectation)
                 .datasetsList(dto.getDataQualityTestDetailsDto()
-                    .getDatasetList()
+                    .datasetList()
                     .stream()
                     .distinct()
                     .map(this::mapReference)
                     .collect(Collectors.toList()))
-                .linkedUrlList(dto.getDataQualityTestDetailsDto().getLinkedUrlList())
+                .linkedUrlList(dto.getDataQualityTestDetailsDto().linkedUrlList())
                 .latestRun(dataQualityMapper.mapDataQualityTestRun(
                     dto.getDataEntity().getId(),
-                    dto.getDataQualityTestDetailsDto().getLatestTaskRun())
+                    dto.getDataQualityTestDetailsDto().latestTaskRun())
                 )
-                .suiteName(dto.getDataQualityTestDetailsDto().getSuiteName())
-                .suiteUrl(dto.getDataQualityTestDetailsDto().getSuiteUrl());
+                .suiteName(dto.getDataQualityTestDetailsDto().suiteName())
+                .suiteUrl(dto.getDataQualityTestDetailsDto().suiteUrl());
         }
 
         if (typeNames.contains(DataEntityType.NameEnum.CONSUMER)) {
             details.setInputList(dto.getDataConsumerDetailsDto()
-                .getInputList()
+                .inputList()
                 .stream()
                 .distinct()
                 .map(this::mapReference).collect(Collectors.toList()));
+        }
+
+        if (typeNames.contains(DataEntityType.NameEnum.ENTITY_GROUP)) {
+            final List<DataEntityRef> dataEntityRefs = dto.getGroupsDto().entities().stream()
+                .map(this::mapReference)
+                .toList();
+            details.setEntities(dataEntityRefs);
+            details.setHasChildren(dto.getDataEntityGroupDetailsDto().hasChildren());
         }
 
         if (typeNames.contains(DataEntityType.NameEnum.INPUT)) {
@@ -182,18 +215,18 @@ public class DataEntityMapperImpl implements DataEntityMapper {
     public DataEntity mapDataQualityTest(final DataEntityDetailsDto dto) {
         final DataQualityTestDetailsDto dqDto = dto.getDataQualityTestDetailsDto();
 
-        final DataQualityTestRun latestRun = dqDto.getLatestTaskRun() != null
-            ? dataQualityMapper.mapDataQualityTestRun(dto.getDataEntity().getId(), dqDto.getLatestTaskRun())
+        final DataQualityTestRun latestRun = dqDto.latestTaskRun() != null
+            ? dataQualityMapper.mapDataQualityTestRun(dto.getDataEntity().getId(), dqDto.latestTaskRun())
             : null;
 
         return mapPojo(dto)
-            .suiteName(dqDto.getSuiteName())
-            .suiteUrl(dqDto.getSuiteUrl())
+            .suiteName(dqDto.suiteName())
+            .suiteUrl(dqDto.suiteUrl())
             .expectation(mapDataQualityTestExpectation(dqDto))
             .latestRun(latestRun)
-            .linkedUrlList(dqDto.getLinkedUrlList())
+            .linkedUrlList(dqDto.linkedUrlList())
             .datasetsList(dqDto
-                .getDatasetList()
+                .datasetList()
                 .stream()
                 .map(this::mapRef)
                 .collect(Collectors.toList()));
@@ -249,14 +282,17 @@ public class DataEntityMapperImpl implements DataEntityMapper {
     }
 
     @Override
+    public DataEntityGroupLineageList mapGroupLineageDto(final DataEntityGroupLineageDto dataEntityGroupLineageDto) {
+        final List<DataEntityLineageStream> lineageStreams = dataEntityGroupLineageDto.lineageItems().stream()
+            .map(this::mapStream)
+            .toList();
+        return new DataEntityGroupLineageList()
+            .items(lineageStreams);
+    }
+
+    @Override
     public DataEntityRef mapRef(final DataEntityDto dto) {
-        return new DataEntityRef()
-            .id(dto.getDataEntity().getId())
-            .internalName(dto.getDataEntity().getInternalName())
-            .externalName(dto.getDataEntity().getExternalName())
-            .types(dto.getTypes().stream().map(this::mapType).collect(Collectors.toList()))
-            .hasAlerts(dto.isHasAlerts())
-            .url("");
+        return mapReference(dto);
     }
 
     private DataEntityLineageStream mapStream(final DataEntityLineageStreamDto upstream) {
@@ -288,26 +324,29 @@ public class DataEntityMapperImpl implements DataEntityMapper {
     private DataEntityRef mapReference(final DataEntityDto dto) {
         final DataEntityPojo pojo = dto.getDataEntity();
 
+        return mapReference(pojo)
+            .types(dto.getTypes().stream().map(this::mapType).collect(Collectors.toList()))
+            .hasAlerts(dto.isHasAlerts());
+    }
+
+    private DataEntityRef mapReference(final DataEntityPojo pojo) {
         return new DataEntityRef()
             .id(pojo.getId())
             .externalName(pojo.getExternalName())
             .internalName(pojo.getInternalName())
-            .types(dto.getTypes().stream().map(this::mapType).collect(Collectors.toList()))
             .url("");
     }
 
     private DataSetStats mapStats(final DataEntityDetailsDto.DataSetDetailsDto dataSetDetailsDto) {
         return new DataSetStats()
-            .consumersCount(dataSetDetailsDto.getConsumersCount())
-            .fieldsCount(dataSetDetailsDto.getFieldsCount())
-            .rowsCount(dataSetDetailsDto.getRowsCount());
+            .consumersCount(dataSetDetailsDto.consumersCount())
+            .fieldsCount(dataSetDetailsDto.fieldsCount())
+            .rowsCount(dataSetDetailsDto.rowsCount());
     }
 
     private DataQualityTestExpectation mapDataQualityTestExpectation(final DataQualityTestDetailsDto dto) {
-        final DataQualityTestExpectation expectation = new DataQualityTestExpectation().type(dto.getExpectationType());
-
-        expectation.putAll(MapUtils.emptyIfNull(dto.getExpectationParameters()));
-
+        final DataQualityTestExpectation expectation = new DataQualityTestExpectation().type(dto.expectationType());
+        expectation.putAll(MapUtils.emptyIfNull(dto.expectationParameters()));
         return expectation;
     }
 }
